force-app/src/objects/ffps_custRem__Reminder_Level__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Reminder Levels</relationshipLabel>
        <relationshipName>Reminder_Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Days_Blocked_Until_Next_Run__c</fullName>
        <label>Days Blocked Until Next Run</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Is_Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Preferred_Communication_Channel__c</fullName>
        <label>Preferred Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_custRem__Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reminder Level</label>
    <listViews>
        <fullName>ffps_custRem__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_custRem__Severity__c</columns>
        <columns>ffps_custRem__Is_Final__c</columns>
        <columns>ffps_custRem__Days_Blocked_Until_Next_Run__c</columns>
        <columns>ffps_custRem__Company__c</columns>
        <columns>ffps_custRem__Preferred_Communication_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reminder Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>